# synonym

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.tpl
src/: analyze.rs  attrs.rs  info.rs  lib.rs
src/impls/: as_ref.rs  deref.rs  deref_mut.rs  display.rs  from.rs  from_str.rs  mod.rs  number.rs  string.rs  value.rs
src/impls/deriveable/: clone.rs  copy.rs  debug.rs  default.rs  deserialize.rs  eq.rs  hash.rs  mod.rs  ord.rs  partial_eq.rs  partial_ord.rs  serialize.rs
tests/: progress.rs  synonym.rs
tests/cases/: CHANGELOG.md  fail-enum.rs  fail-enum.stderr  fail-generics.rs  fail-generics.stderr  fail-named-field.rs  fail-named-field.stderr  fail-two-fields.rs  fail-two-fields.stderr  fail-zero-fields.rs  fail-zero-fields.stderr  pass-char.rs  pass-display.rs  pass-floats.rs  pass-int.rs  pass-lint.rs  pass-serde.rs  pass-signed-int.rs  pass-skip.rs  pass-string.rs  pass-unsigned-int.rs
