[package]
name = "synonym"
version = "0.1.1"
authors = ["Marcin Sas-Szymanski <sasik520@gmail.com>"]
license-file = "LICENSE"
description = "Customizable derive macro to create newtypes. It peeks into the underlying type to choose which traits should be implemented."
homepage = "https://github.com/synek317/synonym"
documentation = "https://docs.rs/synonym"
repository = "https://github.com/synek317/synonym"
categories = ["development-tools", "rust-patterns"]
keywords = ["newtype", "newtypes", "synonym", "alias"]
edition = "2018"

[badges]
travis-ci = { repository = "synek317/synonym", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]
doctest = false
proc-macro = true
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20.3"

[features]
with_serde = []